debugging proxy server

--- a/public/index.html
+++ b/public/index.html
@@ -24,7 +24,7 @@
       <!-- <div id="legend"><h3>Legend</h3></div> -->
       <div class=".btn-group">
         <a href="/reports">
-          <button type="button" class="btn btn-info">
+          <button type="button" class="btn btn-info crimeButton">
           show crimes
           </button>
         </a>
